# mcp-server-reddit

./: Dockerfile  README.md  pyproject.toml
src/mcp_server_reddit/: __init__.py  server.py
