[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-reddit"
version = "0.3.0"
description = "A Model Context Protocol (MCP) server that provides tools for fetching Reddit content, including frontpage posts, subreddit information and hot posts, post details, and comments."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Hawstein", email = "hawstein@claudemind.com" },
]
keywords = ["reddit", "mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "redditwarp>=1.3.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
mcp-server-reddit = "mcp_server_reddit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_reddit"]
